--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Vivek Raman",
+  "name": "Game Developer Portfolio | Vivek Raman",
   "icons": [
     {
       "src": "favicon.ico",
@@ -18,7 +18,7 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
+  "start_url": "./portfolio",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
